finally works with m4a files
currently creating a temporary file with converted m4a to wav.
In future - want to have memory only solution - probably via embedded web server.