@@ -113,6 +113,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-h2console'
     implementation 'org.springframework.boot:spring-boot-starter-flyway'
     implementation 'org.springframework.boot:spring-boot-starter-jooq'
+    implementation("com.github.curious-odd-man:alac2wav:1.0")
 
     implementation 'org.mp4parser:isoparser:1.9.56'
 
@@ -120,7 +121,7 @@ dependencies {
     implementation "org.openjfx:javafx-fxml:${javafxVersion}"
     implementation "org.openjfx:javafx-media:${javafxVersion}"
 
-    implementation 'com.mpatric:mp3agic:0.9.1'      // NOTE: it is no longer supported
+    implementation 'com.mpatric:mp3agic:0.9.1'      // NOTE: library is no longer supported
 
     compileOnly 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
@@ -141,5 +142,12 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
     testLogging.showStandardStreams = true
-    jvmArgs('--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED')
+    jvmArgs([
+            "--add-reads", "javafx.graphics=ALL-UNNAMED",
+            "--add-opens", "javafx.controls/com.sun.javafx.charts=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/com.sun.javafx.css=ALL-UNNAMED",
+            "--add-opens", "javafx.base/com.sun.javafx.runtime=ALL-UNNAMED"
+    ])
 }
